# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yaml
bruno/: bruno.json  subscriptions.bru
docker/: docker-compose.yaml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/config/: config.rs  database.rs  mod.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/utils/: mod.rs  test_app.rs
